--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,8 @@ fabric.properties
 
 # idea folder, uncomment if you don't need it
 # .idea
+
+real_state/static_root/
+real_state/static_root
+real_state/real_state/static_root/
+real_state/real_state/static_root
