--- a/real_state/pyproject.toml
+++ b/real_state/pyproject.toml
@@ -37,6 +37,7 @@ psycopg2-binary= "^2.9.3"
 uWSGI = "~2.0.20"
 gunicorn = "^20.1.0"
 django-crispy-forms = "1.14.0"
+django-cors-headers = "^3.14.0"
 
 
 [build-system]
