--- a/real_state/pyproject.toml
+++ b/real_state/pyproject.toml
@@ -38,6 +38,9 @@ uWSGI = "~2.0.20"
 gunicorn = "^20.1.0"
 django-crispy-forms = "1.14.0"
 django-cors-headers = "^3.14.0"
+pymongo = "^4.3.3"
+mixer = "^7.2.2"
+pandas = "^2.0.0"
 
 
 [build-system]
