--- a/real_state/pyproject.toml
+++ b/real_state/pyproject.toml
@@ -41,6 +41,7 @@ django-cors-headers = "^3.14.0"
 pymongo = "^4.3.3"
 mixer = "^7.2.2"
 pandas = "^2.0.0"
+pytest-django = "^4.5.2"
 
 
 [build-system]
